scrollbar chanegs so now it functions correctly

--- a/src/components/CategoryScroll/categoryScroll.css
+++ b/src/components/CategoryScroll/categoryScroll.css
@@ -34,6 +34,7 @@
 .images{
     height:100%;
     width: 100%;
+    min-width: 90px;
 }
 
 
